tests/no_compile/bad_outer_attr.stderr
error: invalid content of mmio attribute, allowed values: `no_ctors`, `ConstPtr`, `ConstInner`
 --> tests/no_compile/bad_outer_attr.rs:2:8
  |
2 | #[mmio(no_ctors_x)]
  |        ^^^^^^^^^^
